modeled flow idle #7544
experimental modeled flow idle

* implement basic idle flow model

* grr percent

* experiment with incorporating timing in to modeled idle

* missed a field

* live data, reset, scaling

* livedata

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -938,6 +938,21 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		yBins = minimumOilPressureValues
 		gauge = OilPressGauge
 
+	curve = idleFlowEstimate, "Idle flow estimate"
+		columnLabel = "Flow", "Idle %"
+		xAxis = 0, 20, 9
+		yAxis = 0, 100, 7
+		xBins = idleFlowEstimateFlow
+		yBins = idleFlowEstimatePosition
+
+	curve = idleAirmassTimingEquivalence, "Idle airmass/timing equivalence"
+		columnLabel = "Airmass delta", "Timing adjustment"
+		xAxis = -30, 30, 7
+		yAxis = -20, 20, 5
+		xBins = airmassToTimingBins
+		yBins = airmassToTimingValues
+
+
 	curve = targetAfrBlend1Bias, "Target AFR adder 1 bias"
 		columnLabel = "param", "bias"
 		xAxis = 0, 100, 11
@@ -2305,6 +2320,8 @@ menuDialog = main
 		subMenu = hipFunction,				"HIP9011 settings (knock sensor)" @@if_ts_show_hip9011
 
 		subMenu = kLineDialog,              "K-Line"@@if_ts_show_k_line
+		subMenu = idleFlowEstimate, "Idle flow estimate", { modeledFlowIdle }
+		subMenu = idleAirmassTimingEquivalence, "Idle airmass/timing equivalence", { modeledFlowIdle }
 		subMenu = parkingLot,				"Experimental 1"@@if_ts_show_experimental
 		subMenu = parkingLot2,				"Experimental 2"@@if_ts_show_experimental
 		subMenu = parkingLot3,				"Experimental 3"@@if_ts_show_experimental
@@ -3920,7 +3937,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Dashpot coasting-to-idle Decay time", iacByTpsDecayTime
 
 	dialog = idleSettings, "", yAxis
-		field = "Idle control mode",					idleMode
+		field = "Idle control mode",					idleMode, { !modeledFlowIdle }
 
 		field = "! Solenoid idle control is disabled at zero RPM"
 
@@ -3928,7 +3945,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		panel = idleGating
 ; closed loop mode is an addition on top of open loop, so idleOpenLoop stays open even when closed loop is selected
 		panel = idleOpenLoop
-		panel = idlePidSettings, { idleMode == @@idle_mode_e_IM_AUTO@@ }
+		panel = idlePidSettings, { idleMode == @@idle_mode_e_IM_AUTO@@ || modeledFlowIdle }
 		panel = idleExtra
 
 	dialog = idleTimingPidCorrDialog, "", yAxis
@@ -5344,6 +5361,8 @@ dialog = tcuControls, "Transmission Settings"
 		field = "BRZ/FRS/GT86 pedal",							allowIdenticalPps
 		field = "Artificial Misfire",						artificialTestMisfire
 		field = "Always use instant RPM",				alwaysInstantRpm
+		field = "Modeled flow idle",					modeledFlowIdle
+		field = "Max idle flow",						idleMaximumAirmass
 		field = vinNumber,										vinNumber
 		field = turbochargerFilter,							turbochargerFilter
 		field = auxFrequencyFilter,							auxFrequencyFilter
