Some sort of MAP and/or AFR smoothing for some reason  #6579 only:uaefi

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -3760,6 +3760,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Swap channels 1 and 2", flipWboChannels, flipWboChannels
 		field = "Force O2 sensor heating", forceO2Heating
 		field = "Suppress on-board WBO",  suppressWboWorkaround7048
+		field = "Smoothing Factor",     mapExpAverageAfr
 
 	dialog = egoSettings, "", yAxis
 		panel = uegoCan
