--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1595,6 +1595,8 @@ gaugeCategory = Sensors - Basic
 	IATGauge			= intake,	"Intake air temp",		"C",		-40,	140,	-15,		1,		95,	110,	1,	1
 	afr1Gauge			= AFRValue, @@GAUGE_NAME_AFR@@,			"",		10,	19.4,		12,	13,		15,	16,	2,	2
 	afr2Gauge			= AFRValue2, @@GAUGE_NAME_AFR2@@,		"",		10,	19.4,		12,	13,		15,	16,	2,	2
+	smoothedAfr1Gauge			= SmoothedAFRValue, @@SMOOTHED_GAUGE_NAME_AFR@@,			"",		10,	19.4,		12,	13,		15,	16,	2,	2
+	smoothedAfr2Gauge			= SmoothedAFRValue2, @@SMOOTHED_GAUGE_NAME_AFR2@@,		"",		10,	19.4,		12,	13,		15,	16,	2,	2
 	afrGasScale1Gauge	= afrGasolineScale, @@GAUGE_NAME_AFR_GAS_SCALE@@,	"",		10,	19.4,		12,	13,		15,	16,	2,	2
 	afrGasScale2Gauge	= afr2GasolineScale, @@GAUGE_NAME_AFR2_GAS_SCALE@@,	"",		10,	19.4,		12,	13,		15,	16,	2,	2
 	lambda1Gauge		= lambdaValue, @@GAUGE_NAME_LAMBDA@@,	"",		0.65,	1.2,		0.7,	0.75,		1.1,	1.15,	3,	2
