gradle: autoupdate uses shadowJar

--- a/java_console/autoupdate/build.gradle
+++ b/java_console/autoupdate/build.gradle
@@ -18,19 +18,11 @@ dependencies {
 evaluationDependsOn(':core_ui')
 evaluationDependsOn(':core_io')
 
-jar {
-    base {
-        archivesName = 'rusefi_autoupdate'
-    }
-    destinationDirectory = file("$rootDir/../console")
-
-    // lame 'shadowJar' manual implementation causes logo.png to be include both as source ans outputs? weird
-    // todo: why do we not use proper shadowJar here?
-    duplicatesStrategy = DuplicatesStrategy.WARN
-    from project.sourceSets.main.allSource
-    from project(':core_ui').sourceSets.main.output
-    from project(":core_io").sourceSets.main.output
-    from project(':logging-api').sourceSets.main.output
+shadowJar {
+  base {
+    archivesName = "${rootDir}/../console/rusefi_autoupdate"
+    archiveClassifier = ''
+  }
 
     manifest {
         attributes(
