--- a/firmware/config/boards/hellen/alphax-4K-GDI/connectors/gdi-B.yaml
+++ b/firmware/config/boards/hellen/alphax-4K-GDI/connectors/gdi-B.yaml
@@ -2,178 +2,195 @@ meta: config/boards/hellen_meta.h
 
 pins:
   - pin: 1B
-    id: TLE9104_0_OUT_3
+    function: HPFP Positive
+    meta: H144_LS_6
+    color: green
     class: outputs
-    ts_name: ___ Port injector 4
-    function: Port injector 4
-    color: orange/brown
-    type: ls
 
   - pin: 2B
-    id: TLE9104_0_OUT_2
-    class: outputs
-    ts_name: ___ Port injector 3
-    function: Port injector 3
-    color: blue
-    type: ls
+    function: GDI Injector 4 Positive
+    color: brown
 
   - pin: 3B
-    id: TLE9104_0_OUT_1
+    function: GDI Injector 4 Negative
+    ts_name: ___ GDI Injector 4
     class: outputs
-    ts_name: ___ Port injector 2
-    function: Port injector 2
-    color: white
+    meta: H144_LS_4
+    color: brown
     type: ls
 
   - pin: 4B
-    id: TLE9104_0_OUT_0
-    class: outputs
-    ts_name: ___ Port injector 1
-    function: Port injector 1
-    color: green
-    type: ls
+    function: GDI Injector 3 Positive
+    color: blue
 
   - pin: 5B
-    id: TLE9104_1_OUT_0
+    function: GDI Injector 3 Negative
+    ts_name: ___ GDI Injector 3
     class: outputs
-    ts_name: ___ Main Relay Control
-    function: Main relay control
+    meta: H144_LS_3
+    color: blue
     type: ls
-    color: grey
 
   - pin: 6B
-    meta: H144_IN_VBATT
-    class: analog_inputs
-    function: ECU power supply / Ignition Key Power
-    ts_name: ___ Battery Sense
-    type: 12v
+    function: GDI Injector 2 Positive
+    color: white
 
   - pin: 7B
-    id: TLE9104_1_OUT_1
+    function: GDI Injector 2 Negative
     class: outputs
-    function: Fuel Pump Relay Output
+    ts_name: ___ GDI Injector 2
+    meta: H144_LS_2
+    color: white
     type: ls
-    ts_name: ___ Fuel Pump
 
   - pin: 8B
-    id: TLE9104_1_OUT_2
-    class: outputs
-    function: Fan 1
-    type: ls
-    ts_name: ___ Fan 1
+    function: GDI Injector 1 Positive
+    color: green
 
   - pin: 9B
-    id: TLE9104_1_OUT_3
+    function: GDI Injector 1 Negative
     class: outputs
-    function: Fan 2
-    color: yellow
+    ts_name: ___ GDI Injector 1
+    meta: H144_LS_1
     type: ls
-    ts_name: ___ Fan 2
+    color: green
 
   - pin: 10B
-    meta: H144_IN_CRANK
-    class: event_inputs
-    function: Crank / VR 9924 Negative
-    ts_name: ___ VR Negative
+    function: HPFP Negative
+    color:
 
   - pin: 11B
-    function: Crank / VR 9924 Positive
-
-  - pin: 16B
-    function: Knock Input
-
-  - pin: 19B
-    function: PPS 1
-    type: av
-    meta: H144_IN_PPS
-    class: analog_inputs
-    ts_name: ___ PPS1
-    color: white
-
-  - pin: 20B
-    function: PPS 2
-    type: av
-    meta: H144_IN_PPS2
-    class: analog_inputs
-    ts_name: ___ PPS2
+    meta: H144_IGN_4
+    class: outputs
+    function: Smart Ignition Coil 4
+    type: ign
+    ts_name: ___ Ignition 4
     color: orange/brown
 
-  - pin: 21B
-    id: [H144_IN_SENS1, H144_IN_SENS1]
-    class: [event_inputs, switch_inputs]
-    function: Digital Input 1
-    ts_name: ___ Digital Input 1
+  - pin: 12B
+    meta: H144_IGN_3
+    class: outputs
+    function: Smart Ignition Coil 3
+    type: ign
+    ts_name: ___ Ignition 3
+    color: blue
+
+  - pin: 13B
+    meta: H144_IGN_2
+    class: outputs
+    function: Smart Ignition Coil 2
+    type: ign
+    ts_name: ___ Ignition 2
     color: white
 
+  - pin: 14B
+    meta: H144_IGN_1
+    class: outputs
+    function: Smart Ignition Coil 1
+    type: ign
+    ts_name: ___ Ignition 1
+    color: green
+
+  - pin: 15B
+    function: CAN bus high (CANH)
+    type: can
+    color: green
+
+  - pin: 16B
+    function: CAN1 bus low (CANL)
+    type: can
+    color: blue
+
+  - pin: 17B
+    function: ETB negative
+    type: etb
+    color: white
+
+  - pin: 18B
+    function: +12V from main relay
+    type: 12v
+    color: red
+
+  - pin: 19B
+    function: TPS 1 signal
+    ts_name: ___ TPS1
+    meta: H144_IN_TPS
+    color: green
+    type: av
+    class: analog_inputs
+
+  - pin: 20B
+    function: TPS 2 signal
+    ts_name: ___ TPS2
+    meta: H144_IN_TPS2
+    color: blue
+    type: av
+    class: analog_inputs
+
+
+  - pin: 21B
+    function: ECT CLT Coolant
+    color: grey
+    type: at
+    meta: H144_IN_CLT
+    class: analog_inputs
+
+
   - pin: 22B
-    id: [H144_IN_AUX2_DIGITAL, H144_IN_AUX2_DIGITAL, H144_IN_AUX2]
-    class: [event_inputs, switch_inputs, analog_inputs]
-    function: Input 2 Digital / Analog / SENT
-    ts_name: ___ Input 2
-    color: yellow
+    function: IAT
+    color: blue
+    type: at
+    meta: H144_IN_IAT
+    class: analog_inputs
 
   - pin: 23B
-    function: Fuel Low Pressure
+    function: MAP Signal
     type: av
-    meta: H144_IN_AUX4
+    color: yellow
+    meta: H144_IN_MAP1
     class: analog_inputs
-    ts_name: ___ Fuel Low Pressure
 
   - pin: 24B
-    function: Fuel High Pressure
-    type: av
-    meta: H144_IN_MAP3
-    class: analog_inputs
-    ts_name: ___ Fuel High Pressure
+    function: Sensor +5v Power Feed
+    type: 5v
+    color: orange
+
+  - pin: 25B
+    function: ETB positive
+    type: etb
+    color: blue
+
 
   - pin: 26B
     function: Power GND
     type: gnd
+    color: black
 
   - pin: 27B
-    id: [H144_IN_SENS2, H144_IN_SENS2]
-    class: [event_inputs, switch_inputs]
-    function: Digital Input 3
-    ts_name: ___ Digital Input 3
-    color: yellow
+    function: Sensor GND
+    type: agnd
+    color: black
 
   - pin: 28B
-    id: [H144_IN_SENS3, H144_IN_SENS3]
-    class: [event_inputs, switch_inputs]
-    function: Digital Input 4
-    ts_name: ___ Digital Input 4
+    function: 28B input
+    ts_name: ___ input
+    id: [H144_IN_O2S2_DIGITAL, H144_IN_O2S2]
+    class: [switch_inputs, analog_inputs]
+    type: av
 
-  - pin: 29B
-    id: TLE9104_2_OUT_0
+  - pin: 33B
+    function: Wastegate Low Side
+    ts_name: ___ Wastegate Solenoid
     class: outputs
-    ts_name: ___ VVT1
-    function: VVT1
+    id: TLE9104_3_OUT_0
     type: ls
-    color: orange
 
-  - pin: 30B
-    id: TLE9104_2_OUT_1
+  - pin: 34B
+    function: AC Low Side
+    ts_name: ___ AC Control
     class: outputs
-    ts_name: ___ VVT2
-    function: VVT2
+    id: TLE9104_3_OUT_1
     type: ls
-    color: blue
-
-  - pin: 31B
-    id: TLE9104_2_OUT_2
-    class: outputs
-    ts_name: ___ VVT3
-    function: VVT3
-    type: ls
-    color: white
-
-  - pin: 32B
-    id: TLE9104_2_OUT_3
-    class: outputs
-    ts_name: ___ VVT4
-    function: VVT4
-    type: ls
-    color: green
 
 
 info:
