IGN_TRIM_1_NAME only:proteus_f4

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1277,12 +1277,12 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		zBins = fuelTrims12_table
 		upDownLabel = "(RICHER)", "(LEANER)"
 
-	table = ignTrimTbl1,  ignTrimMap1,  "Ign trim cyl 1",	1
+	table = ignTrimTbl1,  ignTrimMap1,  @@IGN_TRIM_1_NAME@@,	1
 		xBins =ignTrimRpmBins,  RPMValue
 		yBins =ignTrimLoadBins, ignitionLoad
 		zBins =ignTrims1_table
 
-	table = ignTrimTbl2,  ignTrimMap2,  "Ign trim cyl 2",	1
+	table = ignTrimTbl2,  ignTrimMap2,  @@IGN_TRIM_2_NAME@@,	1
 		xBins =ignTrimRpmBins,  RPMValue
 		yBins =ignTrimLoadBins, ignitionLoad
 		zBins =ignTrims2_table
