Idle slider + multiplier to curve change [update definition & TS]
see: #7563

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -604,10 +604,10 @@ enable2ndByteCanID = false
 		yBins		= crankingTpsCoef
 		gauge		= TPSGauge
 
-	curve = cltIdleCurve, "Warmup Idle multiplier"
-		columnLabel = "Coolant", "Multiplier"
+	curve = cltIdleCurve, "Warmup Idle position"
+		columnLabel = "Coolant", "Position"
 		xAxis		= -40, 120, 10
-		yAxis		=  0,  3, 10
+		yAxis		=  0,  100, 10
 		xBins		= cltIdleCorrBins, coolant
 		yBins		= cltIdleCorr
 		gauge		= CLTGauge
@@ -3900,7 +3900,6 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Use IAC PID Multiplier Table",			useIacPidMultTable
 
 	dialog = idleOpenLoop, "Open Loop Idle"
-		slider = "Open loop base position",				manIdlePosition, horizontal
 		field = "A/C adder",							acIdleExtraOffset@@if_ts_show_air_conditioning
 		field = "A/C RPM target",						acIdleRpmTarget@@if_ts_show_air_conditioning
 		field = "Fan #1 adder",							fan1ExtraIdle
