Spark hardware latency [add field to ignition dialog]
see: #6832

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2551,6 +2551,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 	dialog = ignitionBasic, ""
 		field = "Enabled",						isIgnitionEnabled
 		field = "Mode",							ignitionMode, {isIgnitionEnabled}
+		field = "Spark hardware latency correction", sparkHardwareLatencyCorrection
 ;todo https://github.com/rusefi/rusefi/issues/5894		field = "Maximum timing advance",		maximumIgnitionTiming, {isIgnitionEnabled}
 ;todo https://github.com/rusefi/rusefi/issues/5894		field = "Minimum timing advance",		minimumIgnitionTiming, {isIgnitionEnabled}
 		field = "Individually wired Wasted Spark",				twoWireBatchIgnition, {isIgnitionEnabled == 1 && ignitionMode == @@ignition_mode_e_IM_WASTED_SPARK@@ }
