Rusefi broadcast on Can2 just hammers the bus with messages #7578 CAN settings dialog clean-up only:alphax-8chan

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4421,11 +4421,11 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "CAN read enabled",						canReadEnabled
 		field = "CAN write enabled",					canWriteEnabled
 		field = "Enable rusEFI CAN broadcast",			enableVerboseCanTx
-		field = "Enable extended rusEFI CAN broadcast",			enableExtendedCanBroadcast
-		field = "rusEFI CAN data bus",	canBroadcastUseChannelTwo
-		field = "rusEFI CAN data base address",			verboseCanBaseAddress
-		field = "rusEFI CAN data address type",			rusefiVerbose29b
-		field = "rusEFI CAN data period",				canSleepPeriodMs
+		field = "rusEFI CAN data bus",	canBroadcastUseChannelTwo, { enableVerboseCanTx }
+		field = "rusEFI CAN data base address",			verboseCanBaseAddress, { enableVerboseCanTx }
+		field = "rusEFI CAN data address type",			rusefiVerbose29b, { enableVerboseCanTx }
+		field = "rusEFI CAN data period",				canSleepPeriodMs, { enableVerboseCanTx }
+		field = "Enable board state broadcast",			enableExtendedCanBroadcast
 
 	dialog = canBus2, "Secondary CAN Bus"
 
