separate boost control open loop axis from closed loop axis
 see #6843

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -981,12 +981,12 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 	table = boostTableTbl,  boostMapOpen,  "Boost control duty cycle (open loop)",	1
 		xyLabels	= "RPMValue", {bitStringValue(pwmAxisLabels, boostOpenLoopYAxis)}
 		xBins		= boostRpmBins,  RPMValue
-		yBins		= boostLoadBins,  TPSValue
+		yBins		= boostOpenLoopLoadBins,  TPSValue
 		zBins		= boostTableOpenLoop
 
 	table = boostClosedTbl,  boostMapClosed,  "Boost control target / Closed Loop (kPa)",	1
 		xBins		= boostRpmBins,  RPMValue
-		yBins		= boostLoadBins,  TPSValue
+		yBins		= boostClosedLoopLoadBins,  TPSValue
 		zBins		= boostTableClosedLoop
 
 	table = vvtTable1Tbl,  vvtTable1Map,  "Intake VVT closed loop Target",	1
