GDI Injector Control

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2290,7 +2290,7 @@ menuDialog = main
 		subMenu = allPins3_1_and_2,		"Full pinout 3/3" @@if_ts_show_full_pinout
 
 		subMenu = std_separator@@if_ts_show_gdi
-		subMenu = mc33Dialog,									"PT2001 control"@@if_ts_show_gdi
+		subMenu = mc33Dialog,									"GDI Injector Control"@@if_ts_show_gdi
 		subMenu = hpfpCamDialog,			"HPFP Cam Configuration"@@if_ts_show_gdi
 		subMenu = hpfpPumpDialog,			"HPFP Pump Configuration", {hpfpCamLobes != 0}@@if_ts_show_gdi
 		subMenu = hpfpTargetTable,							"HPFP Target Pressure", {hpfpCamLobes != 0}@@if_ts_show_gdi
@@ -3230,7 +3230,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
     field = useHardSkipInTraction,  useHardSkipInTraction
     panel = tractionIgnitionSkipTableTbl
 
-	dialog = mc33Dialog, "Low-Z injector control PT2001"
+	dialog = mc33Dialog, "Low-Z smart injector control"
 	  field = externalRusEfiGdiModule,    externalRusEfiGdiModule@@if_ts_show_gdi_low_level
 		field = "SPI Chip Select",						mc33816_cs@@if_ts_show_gdi_low_level
 		field = "SPI Device",							mc33816spiDevice@@if_ts_show_gdi_low_level
