make open loop idle a bit simper - remove multiplication #7563

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -604,7 +604,7 @@ enable2ndByteCanID = false
 		yBins		= crankingTpsCoef
 		gauge		= TPSGauge
 
-	curve = cltIdleCurve, "Warmup Idle position"
+	curve = cltIdleCurve, "Idle position by Engine Temperature"
 		columnLabel = "Coolant", "Position"
 		xAxis		= -40, 120, 10
 		yAxis		=  0,  100, 10
@@ -2103,7 +2103,7 @@ menuDialog = main
 		subMenu = idlehw,					"Idle hardware"@@if_ts_show_idle_hardware
 		subMenu = std_separator
 		subMenu = cltIdleRPMCurve,			"Target RPM"
-		subMenu = cltIdleCurve,				"Idle Engine Temp multiplier"
+		subMenu = cltIdleCurve,				"Open Loop Idle Curve"
 		subMenu = std_separator
 		subMenu = idleTimingPidCorrDialog,	"Closed-loop idle timing"
 		subMenu = iacPidMultTbl,			"IAC PID multiplier", 0, {idleMode == 0 && useIacPidMultTable == 1}
