OUT_RCV does not exist in TunerStudio only:hellen154hyundai_f7

--- a/firmware/config/boards/hellen/hellen154hyundai_f7/connectors/main.yaml
+++ b/firmware/config/boards/hellen/hellen154hyundai_f7/connectors/main.yaml
@@ -170,6 +170,12 @@ pins:
     ts_name: ___ BK1 Wastegate Solenoid
     function: BK1 Wastegate Solenoid
 
+  - pin: K48
+    meta: H144_LS_8
+    class: outputs
+    ts_name: ___ OUT_RCV
+    function: OUT_RCV
+
   - pin: K53
     meta: H144_IN_IAT
     class: analog_inputs
