handy note about getAuxDigital

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4694,6 +4694,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		panel = scriptSetting,	East
 
 	dialog = luaDigitalInputsLeftDialog
+		field = "!Read these with getAuxDigital(0) etc"
 		field = "Digital #1",							luaDigitalInputPins1
 		field = "Digital #2",							luaDigitalInputPins2
 		field = "Digital #3",							luaDigitalInputPins3
