Max oil pressure protection, TunerStudio template #7575

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -938,6 +938,14 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		yBins = minimumOilPressureValues
 		gauge = OilPressGauge
 
+	curve = maximumOilPressure, "Maximum oil pressure"
+		columnLabel = "RPM", "max pressure"
+		xAxis = 0, 8000, 5
+		yAxis = 0, 2000, 5
+		xBins = maximumOilPressureBins, RPMValue
+		yBins = maximumOilPressureValues
+		gauge = OilPressGauge
+
 	curve = targetAfrBlend1Bias, "Target AFR adder 1 bias"
 		columnLabel = "param", "bias"
 		xAxis = 0, 100, 11
@@ -1945,9 +1953,10 @@ menuDialog = main
 		subMenu = engineChars,				"Vehicle Information"
 
 		groupMenu = "Limits and protection", {1}, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
-		  groupChildMenu = limitsAndFallback,		"Limits and fallbacks"
-		  groupChildMenu = oilPressureProtection,		"Oil pressure protection"
-			groupChildMenu = lambdaProtection,		"Lambda protection", 0, { isInjectionEnabled }
+			groupChildMenu = limitsAndFallback,			"Limits and fallbacks"
+			groupChildMenu = lowOilPressureProtection,	"Low oil pressure protection"
+			groupChildMenu = highOilPressureProtection,	"High oil pressure protection"
+			groupChildMenu = lambdaProtection,			"Lambda protection", 0, { isInjectionEnabled }
 
 		subMenu = triggerConfiguration,		"Trigger"
 		subMenu = trigger_advanced, "Advanced Trigger", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }@@if_ts_show_trigger_advanced
@@ -4533,11 +4542,15 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Timing retard",						rpmSoftLimitTimingRetard, { cutSparkOnHardLimit }
 		field = "Fuel added",							rpmSoftLimitFuelAdded, { cutFuelOnHardLimit }
 
-	dialog = oilPressureProtection, "Oil pressure protection"
+	dialog = lowOilPressureProtection, "Low oil pressure protection"
 		field = "Minimum oil pressure after start",		minOilPressureAfterStart
 		field = "Enable low oil pressure protection",	enableOilPressureProtect
-		field = "Oil pressure protection timeout", 		minimumOilPressureTimeout
+		field = "Low oil pressure protection timeout", 	minimumOilPressureTimeout
 		panel = minimumOilPressure
+
+	dialog = highOilPressureProtection, "High oil pressure protection"
+		field = "High oil pressure protection timeout", maxOilPressureTimeout
+		panel = maximumOilPressure
 
 	dialog = etbLimits, "Electronic Throttle Limiting"
 		field = "Smoothly close the throttle to limit RPM."
