hellen154hyundai Need access in Outputs to PG6, PC8 and PC9 for wastegate control fix #7599 only:hellen154hyundai_f7

--- a/firmware/config/boards/hellen/hellen154hyundai_f7/connectors/154hyundaiAUX.yaml
+++ b/firmware/config/boards/hellen/hellen154hyundai_f7/connectors/154hyundaiAUX.yaml
@@ -12,6 +12,27 @@ pins:
     ts_name: X2 AuxLS3
     function: AuxLS3
 
+  - pin: wg_pwm
+    meta: H144_OUT_PWM4
+    class: outputs
+    type: ls
+    ts_name: wg_pwm
+    function: wg_pwm
+
+  - pin: wg_dir
+    meta: H144_OUT_PWM5
+    class: outputs
+    type: ls
+    ts_name: wg_dir
+    function: wg_dir
+
+  - pin: wg_dis
+    meta: H144_OUT_IO13
+    class: outputs
+    type: ls
+    ts_name: wg_dis
+    function: wg_dis
+
   - pin: X3
     # H144_OUT_PWM6
     id: D14
