calculated fuel vs fuel pressure compensation table
 see #7594

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1452,6 +1452,11 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		yBins	= hpfpCompensationLoadBins, running_fuel
 		zBins	= hpfpCompensation
 
+	table = hpfpFuelMassCompensationTable, hpfpFuelMassCompensationTableId, "HPFP Fuel mass compensation Factor", 1
+		xBins	= hpfpCompensationRpmBins, RPMValue
+		yBins	= hpfpCompensationLoadBins, running_fuel
+		zBins	= hpfpCompensation
+
 	table = postCrankingEnrichmentTbl, postCrankingEnrichmentMap, "After start enrichment", 1
 		xyLabels	= "Engine Cycles", "Coolant Temp"
 		xBins		= postCrankingDurationBins, revolutionCounterSinceStart
@@ -2304,6 +2309,7 @@ menuDialog = main
 		subMenu = hpfpPumpDialog,			"HPFP Pump Configuration", {hpfpCamLobes != 0}@@if_ts_show_gdi
 		subMenu = hpfpTargetTable,							"HPFP Target Pressure", {hpfpCamLobes != 0}@@if_ts_show_gdi
 		subMenu = hpfpCompensationTable,					"HPFP Pump Compensation", {hpfpCamLobes != 0}@@if_ts_show_gdi
+		subMenu = hpfpFuelMassCompensationTable,			"HPFP Fuel mass compensation factor", {hpfpCamLobes != 0 && injectionCompensationMode == 3}@@if_ts_show_gdi
 
 		@@BOARD_MENU_FROM_FILE@@
 		subMenu = std_separator
