calculated fuel vs fuel pressure compensation table [fix TS layout]
 see #7594

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2309,7 +2309,7 @@ menuDialog = main
 		subMenu = hpfpPumpDialog,			"HPFP Pump Configuration", {hpfpCamLobes != 0}@@if_ts_show_gdi
 		subMenu = hpfpTargetTable,							"HPFP Target Pressure", {hpfpCamLobes != 0}@@if_ts_show_gdi
 		subMenu = hpfpCompensationTable,					"HPFP Pump Compensation", {hpfpCamLobes != 0}@@if_ts_show_gdi
-		subMenu = hpfpFuelMassCompensationTable,			"HPFP Fuel mass compensation factor", {hpfpCamLobes != 0 && injectionCompensationMode == 3}@@if_ts_show_gdi
+		subMenu = hpfpFuelMassCompensationTable,			"HPFP Fuel mass compensation factor", {hpfpCamLobes != 0 && injectorCompensationMode == 3}@@if_ts_show_gdi
 
 		@@BOARD_MENU_FROM_FILE@@
 		subMenu = std_separator
@@ -2699,7 +2699,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Injector flow units",		injectorFlowAsMassFlow, {isInjectionEnabled == 1}
 		field = "Fuel rail pressure sensor", injectorPressureType, { isInjectionEnabled && (highPressureFuel_hwChannel || lowPressureFuel_hwChannel) }
 		field = "Injector flow compensation mode", injectorCompensationMode, { isInjectionEnabled }
-		field = "Injector reference pressure", fuelReferencePressure, { isInjectionEnabled && injectorCompensationMode != 0 }
+		field = "Injector reference pressure", fuelReferencePressure, { isInjectionEnabled && injectorCompensationMode != 0 && injectorCompensationMode != 3 }
 
 	dialog = fuelParams, "Fuel characteristics", yAxis
 		field = "Stoichiometric ratio",			stoichRatioPrimary, {isInjectionEnabled == 1}
