--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2699,7 +2699,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Injector flow units",		injectorFlowAsMassFlow, {isInjectionEnabled == 1}
 		field = "Fuel rail pressure sensor", injectorPressureType, { isInjectionEnabled && (highPressureFuel_hwChannel || lowPressureFuel_hwChannel) }
 		field = "Injector flow compensation mode", injectorCompensationMode, { isInjectionEnabled }
-		field = "Injector reference pressure", fuelReferencePressure, { isInjectionEnabled && injectorCompensationMode != 0 && injectorCompensationMode != 3 }
+		field = "Injector reference pressure", fuelReferencePressure, { isInjectionEnabled && injectorCompensationMode != 0 && injectorCompensationMode != @@injector_compensation_mode_e_ICM_HPFP_Manual_Compensation@@ }
 
 	dialog = fuelParams, "Fuel characteristics", yAxis
 		field = "Stoichiometric ratio",			stoichRatioPrimary, {isInjectionEnabled == 1}
