make it optional

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -5364,6 +5364,7 @@ dialog = tcuControls, "Transmission Settings"
 		field = "BRZ/FRS/GT86 pedal",							allowIdenticalPps
 		field = "Artificial Misfire",						artificialTestMisfire
 		field = "Always use instant RPM",				alwaysInstantRpm
+		field = "Idle return target ramp",				idleReturnTargetRamp
 		field = vinNumber,										vinNumber
 		field = turbochargerFilter,							turbochargerFilter
 		field = auxFrequencyFilter,							auxFrequencyFilter
