calculated fuel vs fuel pressure compensation table [fixes after test]
 see #7594

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1453,9 +1453,10 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		zBins	= hpfpCompensation
 
 	table = hpfpFuelMassCompensationTable, hpfpFuelMassCompensationTableId, "HPFP Fuel mass compensation Factor", 1
-		xBins	= hpfpCompensationRpmBins, RPMValue
-		yBins	= hpfpCompensationLoadBins, running_fuel
-		zBins	= hpfpCompensation
+		xyLabels	= "BAR", "mg"
+		xBins	= hpfpFuelMassCompensationFuelMass, running_baseFuel
+		yBins	= hpfpFuelMassCompensationFuelPressure, pressureCorrectionReference
+		zBins	= hpfpFuelMassCompensation
 
 	table = postCrankingEnrichmentTbl, postCrankingEnrichmentMap, "After start enrichment", 1
 		xyLabels	= "Engine Cycles", "Coolant Temp"
