idle entry target ramp TS update   see #7612

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -3931,6 +3931,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Use idle ignition table",	useSeparateAdvanceForIdle
 		field = "Use idle VE table",		useSeparateVeForIdle@@if_ts_show_useSeparateVeForIdle
 		field = "Override Idle VE table load axis", idleVeOverrideMode, { useSeparateVeForIdle == 1 }
+		field = "Ramp target on return to idle",	idleReturnTargetRamp, { idleMode == @@idle_mode_e_IM_AUTO@@ }
 		field = "Use idle tables for cranking taper",		useSeparateIdleTablesForCrankingTaper
 		field = "Use coasting idle table",	useIacTableForCoasting
 		field = "Dashpot coasting-to-idle Initial idle Adder",	    iacByTpsTaper
@@ -5364,7 +5365,6 @@ dialog = tcuControls, "Transmission Settings"
 		field = "BRZ/FRS/GT86 pedal",							allowIdenticalPps
 		field = "Artificial Misfire",						artificialTestMisfire
 		field = "Always use instant RPM",				alwaysInstantRpm
-		field = "Idle return target ramp",				idleReturnTargetRamp
 		field = vinNumber,										vinNumber
 		field = turbochargerFilter,							turbochargerFilter
 		field = auxFrequencyFilter,							auxFrequencyFilter
