Does HPFP Pump Compensation Factor do anything at all? fix #7595

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1447,7 +1447,7 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		yBins	= hpfpTargetLoadBins, veTableYAxis
 		zBins	= hpfpTarget
 
-	table = hpfpCompensationTable, hpfpCompensationTableId, "HPFP Pump Compensation Factor", 1
+	table = hpfpCompensationTable, hpfpCompensationTableId, "HPFP Pump Feed Forward", 1
 		xBins	= hpfpCompensationRpmBins, RPMValue
 		yBins	= hpfpCompensationLoadBins, running_fuel
 		zBins	= hpfpCompensation
@@ -2309,7 +2309,7 @@ menuDialog = main
 		subMenu = hpfpCamDialog,			"HPFP Cam Configuration"@@if_ts_show_gdi
 		subMenu = hpfpPumpDialog,			"HPFP Pump Configuration", {hpfpCamLobes != 0}@@if_ts_show_gdi
 		subMenu = hpfpTargetTable,							"HPFP Target Pressure", {hpfpCamLobes != 0}@@if_ts_show_gdi
-		subMenu = hpfpCompensationTable,					"HPFP Pump Compensation", {hpfpCamLobes != 0}@@if_ts_show_gdi
+		subMenu = hpfpCompensationTable,					"HPFP Pump Feed Forward", {hpfpCamLobes != 0}@@if_ts_show_gdi
 		subMenu = hpfpFuelMassCompensationTable,			"HPFP Fuel mass compensation factor", {hpfpCamLobes != 0 && injectorCompensationMode == 3}@@if_ts_show_gdi
 
 		@@BOARD_MENU_FROM_FILE@@
