TODO: one day we might actually completely remove industrial PID option, hiding better for now

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -3904,8 +3904,8 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 	dialog = idlePidSettings, "Closed Loop Idle"
 		field = "P-factor",								idleRpmPid_pFactor
 		field = "I-factor",								idleRpmPid_iFactor
-		field = "derivativeFilterLoss",					idle_derivativeFilterLoss
-		field = "antiwindupFreq",						idle_antiwindupFreq
+		field = "derivativeFilterLoss",					idle_derivativeFilterLoss@@if_ts_cic_idle
+		field = "antiwindupFreq",						idle_antiwindupFreq@@if_ts_cic_idle
 		field = "D-factor",								idleRpmPid_dFactor
 		field = "Min",									idleRpmPid_minValue
 		field = "Max",									idleRpmPid_maxValue
