--- a/firmware/config/boards/proteus/board_commands.ini
+++ b/firmware/config/boards/proteus/board_commands.ini
@@ -7,5 +7,6 @@ cmd_set_engine_type_PROTEUS_HONDA_K					= "@@TS_IO_TEST_COMMAND_char@@@@ts_comma
 cmd_set_engine_type_GM_SBC	        			= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_SET_ENGINE_TYPE_16_hex@@@@engine_type_e_GM_SBC_16_hex@@"
 cmd_set_engine_type_HARLEY					        = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_SET_ENGINE_TYPE_16_hex@@@@engine_type_e_HARLEY_16_hex@@"
 cmd_set_engine_type_HYUNDAI_PB				        = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_SET_ENGINE_TYPE_16_hex@@@@engine_type_e_HYUNDAI_PB_16_hex@@"
+cmd_set_engine_type_SUBARU_2011				        = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_SET_ENGINE_TYPE_16_hex@@@@engine_type_e_SUBARU_2011_16_hex@@"
 
 cmd_set_engine_type_FUEL_BENCH						= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_SET_ENGINE_TYPE_16_hex@@@@engine_type_e_FUEL_BENCH_16_hex@@"
