--- a/firmware/config/boards/hellen/alphax-gold/board_options.ini
+++ b/firmware/config/boards/hellen/alphax-gold/board_options.ini
@@ -1,15 +1,15 @@
 	dialog = fancyHardwareDialog, "Board Control"
 		field = "A19 IAT/A20-CLT Inputs +5V Pull-Up",			boardEnTempPullUp
 		field = ""
-		field = "A14 Tach Output Pull-Up Voltage",				boardSelTachPullUp
+		field = "A14 Tachometer Output Pull-Up Voltage",				boardSelTachPullUp
 		field = "Following inputs are shared with VR1, VR2, VR3 inputs"
 		field = "Enable only if VR function is not used"
-		field = "A17 Digial Input 1 +12V Pull-Up",				boardEnHall1PullUp
+		field = "A17 Digital Input 1 +12V Pull-Up",				boardEnHall1PullUp
 		field = "A16 Digital/Analog Input 2 +12V Pull-Up",		boardEnHall2PullUp
 		field = "B24 Digital/Analog Input 3 +12V Pull-Up",		boardEnHall3PullUp
 		field = "B23 Digital Input 4 +12V Pull-Up",				boardEnHall4PullUp
 		field = "A25 Digital/Analog Input 5 +12V Pull-Up",		boardEnHall5PullUp
-		field = "A24 Digial Input 6 +12V Pull-Up",				boardEnHall6PullUp
+		field = "A24 Digital Input 6 +12V Pull-Up",				boardEnHall6PullUp
 		field = "Following inputs are shared with Knock 1/2 inputs"
 		field = "Enable only if input is not used for knock sensing"
 		field = "B21 Digital Input 7 (Knock 1) +5V Pull-Up",	boardEnKnock1PullUp
