Fuel mass compensation should use HP sensor
also small comment about units used
 see #7594 #7624

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1453,7 +1453,7 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		zBins	= hpfpCompensation
 
 	table = hpfpFuelMassCompensationTable, hpfpFuelMassCompensationTableId, "HPFP Fuel mass compensation Factor", 1
-		xyLabels	= "BAR", "mg"
+		xyLabels	= "mg", "BAR"
 		xBins	= hpfpFuelMassCompensationFuelMass, running_baseFuel
 		yBins	= hpfpFuelMassCompensationFuelPressure, pressureCorrectionReference
 		zBins	= hpfpFuelMassCompensation
