TS table fix (ref pressure to highFuelPressure)  see #7594 #7624

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1455,7 +1455,7 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 	table = hpfpFuelMassCompensationTable, hpfpFuelMassCompensationTableId, "HPFP Fuel mass compensation Factor", 1
 		xyLabels	= "mg", "BAR"
 		xBins	= hpfpFuelMassCompensationFuelMass, running_baseFuel
-		yBins	= hpfpFuelMassCompensationFuelPressure, pressureCorrectionReference
+		yBins	= hpfpFuelMassCompensationFuelPressure, highFuelPressure
 		zBins	= hpfpFuelMassCompensation
 
 	table = postCrankingEnrichmentTbl, postCrankingEnrichmentMap, "After start enrichment", 1
